fixed spacing on hs footer mobile

--- a/src/StockportWebapp/wwwroot/assets/sass/healthystockport/modules/_footer.scss
+++ b/src/StockportWebapp/wwwroot/assets/sass/healthystockport/modules/_footer.scss
@@ -5,6 +5,8 @@
 
 footer {
     .grid-container .grid-parent {
-    padding-left: 30px;
+        @media #{$desktop} {
+            padding-left: 30px;
+        }
     }
 }
